--- a/statement-of-originality.yml
+++ b/statement-of-originality.yml
@@ -1,23 +1,13 @@
 # adapted from https://cs.anu.edu.au/courses/comp1720/resources/faq/#statement-of-originality
 
-# put *your* name here
+
 name: Bencze Robert-Valentin
 
 declaration: >-
   I declare that everything I have submitted in this assignment is entirely my
   own work, with the following exceptions: 
 
-# add as many "url+licence+comment" entries as necessary
-# (or remove it altogether if you haven't used any external code)
-code:
-  - comment:
-    url:
-    licence:
-
-
-# add as many "url+licence+comment" entries as necessary
-# (or remove it altogether if you haven't used any external assets)
 assets:
-  - comment:
-    url:
-    licence:
+  - comment: Inspiration to see how I could make use of generic OSC blocks.
+    url: https://github.com/toddtreece/osc-examples
+    license: MIT
